refactor: clean up and refine code
