# src/routes/social-media-routes.ts
@@ -1,12 +1,12 @@
 import express from 'express'
 
-import { getSocialMedias, getSocialMedia, addSocialMedia, changeSocialMediaIcon, editSocialMedia, deleteSocialMedia } from '../controllers'
-import { authMiddleware } from '../middleware'
+import { getSocialMedias, getSocialMedia, addSocialMedia, changeSocialMediaIcon, editSocialMedia, deleteSocialMedia } from 'controllers'
+import { authMiddleware } from 'middleware'
 
 const Router = express.Router()
 
-Router.get('/get-social-medias', getSocialMedias)
-Router.post('/get-social-media', getSocialMedia)
+Router.get('/social-medias', getSocialMedias)
+Router.get('/social-media/:id', getSocialMedia)
 Router.post('/add-social-media', authMiddleware, addSocialMedia)
 Router.put('/change-social-media-icon', authMiddleware, changeSocialMediaIcon)
 Router.put('/edit-social-media', authMiddleware, editSocialMedia)
